WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170445
space-evenly misbehaves with flexbox
https://bugs.webkit.org/show_bug.cgi?id=170445
Summary
space-evenly misbehaves with flexbox
Florian Rivoal
Reported
2017-04-04 02:45:44 PDT
Created
attachment 306166
[details]
failing test case "justify-content: space-evenly" is implemented for grid layout, but not for flexbox, where instead it behaves as flex-start. However, since it parses correctly, it is not possible to use the cascade (or @supports) fallback on some other value, making something like this unusable: .foo { display: flex; justify-content: space-around; /* fallback if the next line is not supported */ justify-content: space-evenly; } Ideally, space-evenly should be implemented in full for flexbox as well (mozilla already has it), but if that's too consuming for a quick fix, as a stop gap measure, using its default fallback alignment (center) would be much better than flex-start. Using space-around would probably be OK as well, as these two values are somewhat close. I've attached a test-case (also submitted to wpt
https://github.com/w3c/web-platform-tests/pull/5336
) that currently fails, and would pass if either a full implementation was done, or if a fallback to either center or space-around was implemented instead.
Attachments
failing test case
(1.08 KB, text/html)
2017-04-04 02:45 PDT
,
Florian Rivoal
no flags
Details
Patch
(28.71 KB, patch)
2017-04-25 17:24 PDT
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Patch
(28.70 KB, patch)
2017-05-09 11:19 PDT
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-cq-01 for mac-elcapitan
(955.29 KB, application/zip)
2017-05-09 12:26 PDT
,
WebKit Commit Bot
no flags
Details
Patch
(28.70 KB, patch)
2017-05-09 13:00 PDT
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Javier Fernandez
Comment 1
2017-04-25 17:24:18 PDT
Created
attachment 308171
[details]
Patch
Dave Hyatt
Comment 2
2017-05-03 10:58:13 PDT
Comment on
attachment 308171
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=308171&action=review
r=me
> LayoutTests/css3/flexbox/alignContent-applies-with-flexWrap-wrap-with-single-line.html:47 > +<div data-offset-y="0">This text should be at the top of it's container</div>
Remove the apostrophe in it's. Shouldn't be there.
Javier Fernandez
Comment 3
2017-05-09 11:19:30 PDT
Created
attachment 309516
[details]
Patch
WebKit Commit Bot
Comment 4
2017-05-09 12:25:59 PDT
Comment on
attachment 309516
[details]
Patch Rejecting
attachment 309516
[details]
from commit-queue. New failing tests: css3/flexbox/alignContent-applies-with-flexWrap-wrap-with-single-line.html Full output:
http://webkit-queues.webkit.org/results/3706929
WebKit Commit Bot
Comment 5
2017-05-09 12:26:01 PDT
Created
attachment 309521
[details]
Archive of layout-test-results from webkit-cq-01 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: webkit-cq-01 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Javier Fernandez
Comment 6
2017-05-09 13:00:13 PDT
Created
attachment 309528
[details]
Patch
WebKit Commit Bot
Comment 7
2017-05-09 13:48:23 PDT
Comment on
attachment 309528
[details]
Patch Clearing flags on attachment: 309528 Committed
r216536
: <
http://trac.webkit.org/changeset/216536
>
WebKit Commit Bot
Comment 8
2017-05-09 13:48:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug